[package]
name = "rust-sievert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
csv = "1.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
influxdb2 = "0.1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
url = "2.2"